Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -7,7 +7,9 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  name: devopsAgentPool
+  demands:
+  - agent.name -equals devopsAgent
 
 steps:
 - script: echo Hello, world!
