--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 pool:
   name: Default
   demands:
-  - agent.name -equals agent
+  - agent.name -equals selfAgent
 
 steps:
 - task: Maven@3
