--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,16 +12,20 @@ pool:
   - agent.name -equals HARMAN
 
 steps:
-- task: Maven@3
+- task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '17.0.9'
-    jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+    allowBrokenSymlinks: false
+    javaHomeOption: 'JDKVersion'
+    mavenVersionOption: 'Path'
+    jdkVersionOption: '17.0.9'
+    mavenDirectory: 'C:\Program Files\Maven\bin'
+    mavenSetM2Home: false
+    mavenAuthenticateFeed: false
+    effectivePomSkip: false
+    sonarQubeRunAnalysis: false
 - task: CopyFiles@2
   inputs:
     SourceFolder: '$(agent.builddirectory)'
