--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,14 @@
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.11.0</version>
         </plugin>
-
+               
+         <plugin>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.4.0</version>
+        </plugin>
+               
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.8</version>
